@@ -30,7 +30,6 @@ NB: "RCS: X..Y " means that the particular release includes
   - new command: ‘L’ (gnugo-frolic-in-the-leaves)
   - new command: ‘C-c C-a’ (gnugo-toggle-abdication)
   - new major mode: GNUGO Frolic (gnugo-frolic-mode)
-  - ‘gnugo-move-history’ returns last two moves w/ RSEL ‘two’
   - GNUGO Board mode now derived from Special mode
   - performance improvements
   - of interest to hackers (see source, BI => backward incompatible)
@@ -38,10 +37,13 @@ NB: "RCS: X..Y " means that the particular release includes
     - ‘gnugo/sgf-read-file’ renamed to ‘gnugo/sgf-create’ and enhanced
     - ‘:sgf-gametree’ internal representation inverted (BI)
     - ‘gnugo-magic-undo’ handles SPEC ‘0’
-    - dropped ‘(gnugo-move-history 'count)’ (BI)
     - new func: ‘gnugo-current-player’
     - new hook: ‘gnugo-start-game-hook’
     - ‘gnugo-board-mode-hook’ now unsuitable for prop munging (BI)
+    - changes to ‘gnugo-move-history’
+      - dropped ‘(gnugo-move-history 'count)’ (BI)
+      - returns last two moves w/ RSEL ‘two’
+      - returns position of last placed stone w/ RSEL ‘bpos’ + 2nd arg COLOR
 
 - 2.3.1 | 2014-02-27
   - portability fixes
